cofc/src/styles/carousels.scss
// .carousel-wrap {}
	.carousel-contain {
		width: 100%;
		height: 100vh;
		overflow: hidden;
		display: flex;
		justify-content: center;
		align-items: center;
		flex-direction: column;
		position: relative;
	}
	.carousel-controls {
		display: flex;
		justify-content: center;
		align-items: center;
		gap: 1rem;
		margin-top: 1rem;
	}
		.carousel-buttons {
			display: flex;
			justify-content: center;
			align-items: center;
			gap: 0.5rem;
		}
		.carousel-progress {
			width: 100%;
			height: 0.5rem;
			background-color: var(--transparency-t-default, rgba(255, 255, 255, 0.12));
			position: absolute;
			overflow: hidden;
		}
			.carousel-progress-bar {
				width: 0%;
				height: 100%;
				background-color: var(--text-color-base, #fff);
			}
		.carousel-progress-dots {
			display: flex;
			justify-content: center;
			align-items: center;
			gap: 0.5rem;
		}
			.carousel-progress-dot {
				width: 0.75rem;
				height: 0.75rem;
				background-color: var(--transparency-t-default, rgba(255, 255, 255, 0.12));
				border-radius: 50%;
				transform: scale(1);
				transition: background 0.3s;
				cursor: pointer;
				&:hover {
					background-color: var(--transparency-t-darker, rgba(255, 255, 255, 0.40));
				}
				&.active {
					background-color: var(--text-color-base, #fff);
				}
			}
	.carousel-slides {
		width: 100%;
		position: relative;
		display: flex;
		align-items: center;
	}
		.carousel-slide {
			padding: 0 0.5rem;
			.carousel-slide-img {
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
				z-index: 0;
			}
			.carousel-slide-info {
				position: relative;
				z-index: 1;
			}
			img {
				width: 100%;
				height: 100%;
				object-fit: cover;
			}
			&.active {
				// Add anything to this style to create a new active state.
				// .carousel-slide-content {}
				.carousel-slide-img {}
			}
		}
			.carousel-slide-content {
				display: flex;
				align-items: flex-end;
				justify-content: flex-start;
				margin: 0;
				padding: 1.125rem 2.5rem;
				position: relative;
				flex-shrink: 0;
				cursor: pointer;
				background-color: var(--transparency-t-default, rgba(255, 255, 255, 0.12));
				transition-property: background-color;
				transition-duration: 0.3s;
				transition-timing-function: ease-in-out;
			}

// Landscape Carousel
.carousel-1 {
	.carousel-progress {
		bottom: 0;
		left: 0;
	}
	.carousel-progress-dots {
		display: none;
	}
	.carousel-slide-content {
		width: clamp(20rem, 7.429rem + 62.857vw, 64rem);
		aspect-ratio: 16/9;
	}
}

// Square Carousel
.carousel-2 {
	.carousel-progress {
		display: none;
	}
	.carousel-controls {
		width: calc(100% - 2rem);
		display: flex;
		justify-content: space-between;
		align-items: center;
	}
	.carousel-slide-content {
		width: clamp(16rem, 10.286rem + 28.571vw, 36rem);
		aspect-ratio: 1/1;
	}
}

// Fullscreen Carousel
.carousel-3 {
	.carousel-controls,
	.carousel-progress {
		display: none;
	}
	.carousel-slides {}
	.carousel-slide-content {
		width: calc(100vw - 2rem);
		height: calc(100vh - 2rem);
		left: 0;
		top: 0;
	}
}

// Spoonful Carousel
.carousel-4 {
	width: 100%;
	height: auto;
	.carousel-slide {
		padding: 0 0.25rem;
		img {
			transform: scale(0.96);
			transition: all 320ms ease;
		}
		&.active img {
			transform: scale(1);
		}
	}
	.carousel-progress {
		display: none;
	}
	.carousel-progress-dots {
		position: absolute;
		right: 16px;
		bottom: 16px;
		pointer-events: all;
	}
	.carousel-slide-content {
		background-color: transparent;
	}
	.carousel-slide-content,
	.carousel-controls {
		width: clamp(20rem, 7.429rem + 62.857vw, 44rem);
		aspect-ratio: 16/9;
	}
	.carousel-controls {
		position: absolute;
		margin: 0;
		gap: initial;
		pointer-events: none;
	}
	.carousel-buttons {
		width: calc(100% + 44px);
		justify-content: space-between;
		position: absolute;
	}
	.btn {
		pointer-events: all;
	}
}

